--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc -b",
+    "build": "npm i && npx tsc -b",
     "start": "node dist/index.js"
   },
   "keywords": [],
