--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@solana/web3.js": "^1.95.2",
     "@types/bitcoinjs-lib": "^5.0.0",
+    "@types/lodash": "^4.17.7",
     "axios": "^1.7.4",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
@@ -21,6 +22,7 @@
     "buffer": "^6.0.3",
     "ed25519-hd-key": "^1.3.0",
     "ethereum-cryptography": "^2.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
